# mpg123xx

./: .hgignore  Makefile.am  README.md  configure.ac
examples/: read_id3.cpp
include/mpg123xx/: basic_wrapper.hpp  error.hpp  format.hpp  frame.hpp  handle.hpp  id3.hpp  mpg123.hpp
src/: error.cpp  format.cpp  frame.cpp  handle.cpp  id3.cpp  mpg123.cpp  utils.cpp  utils.hpp
